deployment/yaml/04-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: classic-customer
  namespace: classic-sample-ns
  labels:
    app: classic-sample-application
    subname: customer
spec:
  path: /
  to:
    kind: Service
    name: classic-customer
    weight: 100
  port:
    targetPort: my-http
